fixed overflow and cleanup

--- a/src/components/First/First.css
+++ b/src/components/First/First.css
@@ -1,8 +1,4 @@
-.container {
-    height: 100vh;
-    width: 100vw;
-    overflow-x: hidden;
-}
+
 
 .state1 {
     background: lightblue url("https://www.scitecheuropa.eu/wp-content/uploads/2019/07/ClaudioVentrella.jpg") no-repeat center;
